--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -13,7 +13,15 @@
     border-radius: 4px;
     background: #292929;
     border: none;
-    font-size: 20px;
+    font-size: 18px;
+    color: white;
+}
+
+.form  p {
+    font-size: 14px;
+    color: hsla(0, 100%, 50%, 1);
+    text-align: left;
+    width: 55%;
 }
 
 .signup {
@@ -37,7 +45,7 @@
     gap: 10px;
     align-items: center;
     color: #7C7C7C;
-    margin: 10px 0;
+    margin: 5px 0;
 }
 
 .consent > input {
