--- a/src/components/profile-widget.module.css
+++ b/src/components/profile-widget.module.css
@@ -33,14 +33,14 @@
 .details h2 {
     font-family: Roboto;
     font-weight: 400;
-    font-size: 2em;
+    font-size: 1.5em;
     margin: 5px;
 }
 
 .details h1 {
     font-family: Roboto;
     font-weight: 500;
-    font-size: 2.5em;
+    font-size: 2.25em;
 }
 
 .genres {
@@ -56,4 +56,13 @@
     border-radius: 30px;
     font-family: Roboto;
     font-size: 1.3em;
+}
+
+.movieGenre {
+    width: 25%;
+    background: hsla(246, 100%, 79%, 1);
+    padding: 2% 12% 2% 5%;
+    border-radius: 30px;
+    font-family: Roboto;
+    font-size: 1.5em;
 }
